some css fixes and language fixes

--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -668,7 +668,7 @@
           </div>
 
           <div class="legenda-row last-legenda-row">
-            <strong>{{ui.planboard.Groups}}</strong>
+            <strong>{{ui.planboard.groups}}</strong>
             <ul>
               <li class="legenda-more">
                 <label>
