some minor language corrections

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -237,7 +237,8 @@
             <div class="control-group">
               <label class="control-label">{{ui.groups.groups}}</label>
               <div class="controls">
-                <select data-placeholder="{{ui.groups.}}Choose a Group" 
+                <!-- {{ui.groups.selectGroup}} -->
+                <select data-placeholder=" " 
                         multiple 
                         class="chzn-select" 
                         style="width:530px" 
