--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -104,7 +104,8 @@
 
             <div class="control-group">
               <label class="control-label">{{ui.message.receviers}}</label>
-              <select placeholder="{{ui.message.chooseRecept}}" 
+              <!-- {{ui.message.chooseRecept}} -->
+              <select data-placeholder=" " 
                       multiple 
                       class="chzn-select" 
                       style="width:530px" 
